src/z80asm/z80asm2/t/30-directive/expected/incbin_11.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/incbin_11.asm
Assembling t/30-directive/input/incbin_11.asm...
t/30-directive/input/incbin_11.asm:1:8: error: Expected filename after INCBIN
    #incbin ; no input file
           ^
